# hermes-gemini-web-research

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: angles.json
hermes/skills/gemini-web-research/: SKILL.md
hermes/skills/gemini-web-research/agents/: openai.yaml
hermes/skills/gemini-web-research/references/: angle-sets.md
src/hermes_gemini_web_research/: __init__.py  cli.py  models.py  orchestrator.py  prompts.py  reconcile.py  report.py  runner.py  synthesis.py
tests/: test_cli.py  test_orchestrator.py  test_prompts.py  test_reconcile.py  test_report.py  test_synthesis.py
