[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-gemini-web-research"
version = "0.1.0"
description = "Concurrent Gemini CLI research workers with strict JSON validation and Markdown synthesis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Hermes Gemini Web Research contributors" }
]
keywords = ["gemini", "research", "cli", "pydantic", "orchestration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
]

[project.scripts]
hermes-gemini-web-research = "hermes_gemini_web_research.cli:main"
hgw-research = "hermes_gemini_web_research.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_gemini_web_research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
